--- a/src/clients/Pages/Home/styles.css
+++ b/src/clients/Pages/Home/styles.css
@@ -20,7 +20,17 @@
     @apply
     w-full h-full object-cover
 }
-
+.produtos-grid-container-home{
+    @apply
+    flex
+    justify-items-center
+    xl:gap-8 lg:gap-6 md:gap-4 gap-2 sm:gap-3
+    grid grid-flow-row
+    xl:grid-cols-5
+    lg:grid-cols-4
+    md:grid-cols-3
+    grid-cols-2 sm:grid-cols-3
+}
 /* .cards-container{
     @apply
     flex flex-row flex-nowrap
